# test_python_hpc

./: .gitignore  README.md  benchmark.py  build_kokkos.sh  compare_complexity.py
.github/workflows/: python-app.yml
test_binder/: CMakeLists.txt  binder.config  binder_config.cfg  generate_bindings.sh
test_binder/python/: example.py
test_binder/src/: all_includes.hpp  bindings.cpp  mylib.cpp  mylib.hpp
test_jax/: example.py  mylib.py
test_pybind11/: CMakeLists.txt
test_pybind11/python/: example.py
test_pybind11/src/: bindings.cpp  mylib.hpp
test_pykokkos/: mylib.py
